# graphs-nomequieroirsenorgrafo

./: CMakeLists.txt  DisjoinSet.h  Graph.h  Json.h  Makefile  README.md  airports.json  edge.h  main.cpp  node.h  run.sh
components/: edge.h  node.h
data/: airports.json  airports2710.json  airportsClean.json  airportsTestWS.json  bipartito.json  conexo.json  graphToJsonDir.json  graphToJsonNonDir.json  notDirected.json
nlohmann/: json.hpp
src/: Graph.h  Json.h  main.cpp
src/components/: DisjoinSet.h  node.h
src/test/: tester.cpp  tester.h
test/: tester.cpp  tester.h
